--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT(InvGrid)
 FIND_PACKAGE(Qt4 REQUIRED)
 INCLUDE(${QT_USE_FILE})
 
-SET(TEST_CXX_SRCS
+SET(SOURCE_FILES
 	main.cpp
 	FileUtil.cpp
 	NBTTag.cpp
@@ -15,13 +15,19 @@ SET(TEST_CXX_SRCS
 	EditWidget.cpp
 )
 
-SET(TEST_MOC_SRCS
+SET(MOC_SOURCE_FILES
 	MainWindow.h
 	EditWidget.h
 )
 
-QT4_WRAP_CPP(TEST_CXX_SRCS ${TEST_MOC_SRCS})
+if(APPLE)
+	SET(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
+	SET(PLATFORM_SOURCE_FILES FilePathCocoa.mm)
+endif()
 
-ADD_EXECUTABLE(InvGrid ${TEST_CXX_SRCS})
+QT4_WRAP_CPP(SOURCE_FILES ${MOC_SOURCE_FILES})
+
+ADD_EXECUTABLE(InvGrid ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})
 TARGET_LINK_LIBRARIES(InvGrid ${QT_LIBRARIES})
 TARGET_LINK_LIBRARIES(InvGrid z)
+
