--- a/Info.plist
+++ b/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>InvGrid</string>
 	<key>CFBundleVersion</key>
-	<string>0.2</string>
+	<string>0.3-r3</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleExecutable</key>
