--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ SET(MOC_SOURCE_FILES
 if(APPLE)
 	SET(CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
 	SET(PLATFORM_SOURCE_FILES FilePathCocoa.mm)
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	SET(PLATFORM_SOURCE_FILES FilePathLinux.cpp)
 endif()
 
 QT4_WRAP_CPP(SOURCE_FILES ${MOC_SOURCE_FILES})
