Added new Netherworld patch Minecraft items. Fixed new items still being created as Air even though Air has been disabled. Added import and exporting of inventories as csv files. Updated cmake config file so deb can be built on i386 as well as amd64.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,5 +44,9 @@ SET(CPACK_PACKAGE_CONTACT "James Bendig <jbendig@starbytesoftware.com>")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "InvGrid is a simple inventory editor for Minecraft.")
 SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtgui4 (>= 4.7.0-0),zlib1g (>=1.0.4)")
 SET(CPACK_DEBIAN_PACKAGE_SECTION Utilities)
-SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
+if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
+	SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
+else()
+	SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
+endif()
 INCLUDE(CPack)
