Added checks to the cmake config file for boost and zlib as reported by keegancsmith on github.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
 
 PROJECT(InvGrid)
 
+FIND_PACKAGE(ZLIB REQUIRED)
+FIND_PACKAGE(Boost REQUIRED)
 FIND_PACKAGE(Qt4 REQUIRED)
 INCLUDE(${QT_USE_FILE})
 
