Prepared for misc. panel inclusion.
Refactored inventory based code out of MainWindow and into its own class, InventoryWidget.
Added tab widget as the central widget for MainWindow and added InventoryWidget as the first tab.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,13 @@ SET(SOURCE_FILES
 	Types.cpp
 	Item.cpp
 	MainWindow.cpp
+	InventoryWidget.cpp
 	EditWidget.cpp
 )
 
 SET(MOC_SOURCE_FILES
 	MainWindow.h
+	InventoryWidget.h
 	EditWidget.h
 )
 
