--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,20 +39,21 @@ endif()
 
 QT4_WRAP_CPP(SOURCE_FILES ${MOC_SOURCE_FILES})
 
+INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 ADD_EXECUTABLE(InvGrid ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES})
 TARGET_LINK_LIBRARIES(InvGrid ${QT_LIBRARIES})
-TARGET_LINK_LIBRARIES(InvGrid z lua)
+TARGET_LINK_LIBRARIES(InvGrid z ${LUA_LIBRARY})
 INSTALL(PROGRAMS InvGrid DESTINATION bin)
 INSTALL(FILES invgrid.desktop DESTINATION share/applications)
 INSTALL(FILES invgrid.png DESTINATION share/pixmaps)
 
 SET(CPACK_GENERATOR DEB)
 SET(CPACK_PACKAGE_NAME InvGrid)
-SET(CPACK_PACKAGE_VERSION 0.7)
+SET(CPACK_PACKAGE_VERSION 0.8)
 SET(CPACK_PACKAGE_CONTACT "James Bendig <jbendig@starbytesoftware.com>")
 
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "InvGrid is a simple inventory editor for Minecraft.")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtgui4 (>= 4.7.0-0),zlib1g (>=1.0.4)")
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqtgui4 (>= 4.7.0-0), zlib1g (>=1.0.4), liblua5.1-0 (>=5.1.0)")
 SET(CPACK_DEBIAN_PACKAGE_SECTION Utilities)
 if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
 	SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
